# leap_prince

./: .gitignore  Cargo.toml
crates/bevy-inspector-egui-extensions/: Cargo.toml
crates/bevy-inspector-egui-extensions/src/: bevy_ecs_tilemap.rs  lib.rs  macros.rs
crates/bevy_mod_loader/: Cargo.toml
crates/bevy_mod_loader/src/: lib.rs
mods/: libadder_dylib.dylib
mods/simple_mod/: Cargo.toml  Mod.toml
mods/simple_mod/src/: lib.rs
src/: main.rs  player.rs  world.rs
src/helpers/: camera.rs  texture.rs
