[package]
name = "leap_prince"
version = "0.1.0"
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
#bevy_rapier2d = {version = "0.10.2", features = ["simd-stable", "render"] }
heron = { version = "0.11.1", features = ["2d", "debug-2d"] }
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "989fd7dd91232b217135a8d9e3b3559d0ce02657"}
bevy-inspector-egui = {version= "0.6.1", features = ["rapier2d"]}
rand = "0.8.4"
bevy-inspector-egui-extensions = {path = "crates/bevy-inspector-egui-extensions", features=["ecs_tilemap"]}
bevy_mod_loader = {path = "crates/bevy_mod_loader"}

[build-dependencies]
embed-resource = "1.6.3"