[package]
name = "simple_mod"
version = "0.1.0"
edition = "2018"
description = "A simple bevy mod"
authors = ["Xentripetal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.5.0"
bevy_app = "0.5.0"
bevy_mod_loader = {path = "../../crates/bevy_mod_loader" }

[lib]
crate-type = ["dylib"]